Tweaks to make the arrows of the dynamic HTML menu consistent with other navigation arrows

--- a/templates/html/search_common.css
+++ b/templates/html/search_common.css
@@ -330,6 +330,10 @@ div.searchresults {
     margin-right: 10px;
 }
 
+#searchBoxPos1 dark-mode-toggle {
+    margin-top: 4px;
+}
+
 /*---------------- External search page results */
 
 .pages b {
