--- a/deps/jquery/sass/_sm-dox.scss
+++ b/deps/jquery/sass/_sm-dox.scss
@@ -209,7 +209,6 @@ $sm-dox__toggle-spacing: floor($sm-dox__main-row-height * 0.1);
             font: bold #{$sm-dox__font-size-small}/#{$sm-dox__toggle-size} monospace !important;
             text-align: center;
             text-shadow: none;
-            background: $sm-dox__collapsible-toggle-bg;
             @include border-radius($sm-dox__border-radius);
         }
         & span.sub-arrow:before {
@@ -305,15 +304,18 @@ $sm-dox__toggle-spacing: floor($sm-dox__main-row-height * 0.1);
         a {
             // Sub menu indicators
             span.sub-arrow {
-                top: 50%;
-                margin-top: -(ceil($sm-dox__desktop-arrow-size / 2));
-                right: $sm-dox__desktop-item-padding-horizontal;
-                width: 0;
-                height: 0;
-                border-width: $sm-dox__desktop-arrow-size;
-                border-style: solid dashed dashed dashed;
-                border-color: $sm-dox__main-text-color transparent transparent transparent;
-                background: transparent;
+                top: 15px;
+                right: 10px;
+                box-sizing: content-box;
+                padding: 0;
+                margin: 0;
+                display: inline-block;
+                width: 5px;
+                height: 5px;
+                background-color: var(--nav-menu-background-color);
+                border-right: 2px solid var(--nav-arrow-color);
+                border-bottom: 2px solid var(--nav-arrow-color);
+                transform: rotate(45deg);
                 @include border-radius(0);
             }
 
@@ -323,16 +325,16 @@ $sm-dox__toggle-spacing: floor($sm-dox__main-row-height * 0.1);
             &:hover,
             &.highlighted {
                 padding: $sm-dox__desktop-item-padding-vertical $sm-dox__desktop-item-padding-horizontal;
-                /*color: $sm-dox__desktop-item-color;
-                background-image:var(--nav-separator-image);
-                background-repeat:no-repeat;
-                background-position:right;
-                @include border-radius(0 !important);
-                 */
             }
             &:hover {
               background-color: var(--nav-menu-active-bg);
               border-radius: 5px !important;
+            }
+
+            &:hover span.sub-arrow {
+              background-color: var(--nav-menu-active-bg);
+              border-right: 2px solid var(--nav-arrow-selected-color);
+              border-bottom: 2px solid var(--nav-arrow-selected-color);
             }
 
             // Make room for the sub arrows
@@ -379,12 +381,7 @@ $sm-dox__toggle-spacing: floor($sm-dox__main-row-height * 0.1);
             // Sub menus items
             a {
                  span.sub-arrow {
-                  right: 8px;
-                  top: 50%;
-                  margin-top: -$sm-dox__desktop-sub-arrow-size;
-                  border-width: $sm-dox__desktop-sub-arrow-size;
-                  border-color: transparent transparent transparent $sm-dox__desktop-sub-item-color;
-                  border-style: dashed dashed dashed solid;
+                  transform: rotate(-45deg);
                 }
 
                 &,
@@ -400,15 +397,6 @@ $sm-dox__toggle-spacing: floor($sm-dox__main-row-height * 0.1);
                 &:hover {
                   background-color: var(--nav-menu-active-bg);
                   border-radius: 5px;
-                  /*
-                    background-image: var(--nav-gradient-active-image);
-                    background-repeat:repeat-x;
-                    color: $sm-dox__main-highlight-color;
-                    text-shadow: var(--nav-text-hover-shadow);
-                  span.sub-arrow {
-                    border-color: transparent transparent transparent $sm-dox__main-highlight-color;
-                  }
-                  */
                 }
             }
         }
