--- a/templates/html/search_common.css
+++ b/templates/html/search_common.css
@@ -18,6 +18,7 @@ dark-mode-toggle {
     border-radius: 0.65em;
     border: 1px solid var(--search-box-border-color);
     z-index: 102;
+    margin-right: 4px;
 }
 
 #MSearchBox .left {
