--- a/templates/html/navtree.css
+++ b/templates/html/navtree.css
@@ -134,7 +134,6 @@
 }
 
 #nav-tree {
-  background-repeat:repeat-x;
   background-color: var(--nav-background-color);
   -webkit-overflow-scrolling : touch; /* iOS 5+ */
   scrollbar-color: transparent transparent;
@@ -239,3 +238,90 @@ div.nav-sync-icon:hover span.sync-icon-right {
   div.ui-resizable-handle { display: none; position: relative; }
 }
 
+/*---------------------------*/
+#container {
+	display: grid;
+	grid-template-columns: auto auto;
+	overflow: hidden;
+}
+
+#page-nav {
+	background: var(--nav-background-color);
+	display: block;
+	width: 250px;
+	box-sizing: content-box;
+        position: relative;
+        overflow: auto;
+        -webkit-overflow-scrolling : touch; /* iOS 5+ */
+        scrollbar-color: transparent transparent;
+        transition: scrollbar-color 0.3s ease;
+	border-left: 1px solid var(--nav-border-color);
+}
+
+#page-nav.hovered {
+  scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-background-color);
+}
+
+#page-nav-resize-handle {
+  transition: opacity 0.5s ease;
+  background-color: var(--nav-splitbar-bg-color);
+  opacity:0;
+  cursor:ew-resize;
+  height:100%;
+  right:0;
+  top:0;
+  width:6px;
+  position: relative;
+  z-index: 1;
+  user-select: none;
+}
+
+#page-nav-resize-handle:after {
+  content: '';
+  display: block;
+  top: 50%;
+  left: 1px;
+  width: 2px;
+  height: 15px;
+  border-left: 1px solid var(--nav-splitbar-handle-color);
+  border-right: 1px solid var(--nav-splitbar-handle-color);
+  position: absolute;
+}
+
+#page-nav-resize-handle.dragging,
+#page-nav-resize-handle:hover {
+  opacity: 1;
+}
+
+#page-nav-contents {
+  display: block;
+  top: 0;
+  left: 0;
+  position: absolute;
+  padding: 0 0 0 6px;
+}
+
+ul.page-outline,
+ul.page-outline ul {
+  text-indent: 0;
+  list-style: none outside none;
+  padding: 0 0 0 4px;
+}
+
+ul.page-outline {
+  margin: 4px 0;
+}
+
+ul.page-outline div.item {
+  font: 12px var(--font-family-nav);
+  line-height: 22px;
+}
+
+ul.page-outline li {
+  white-space: nowrap;
+}
+
+#container.resizing {
+  cursor: ew-resize;
+  user-select: none;
+}
