Update doxygen.css to fix validation issue (II)
It is unclear what `text-wrap: unrestricted` is supposed to do, as it is not standard and I cannot find any documentation but this page:
http://www.css-infos.neolao.com/property/text-wrap

I replaced it with inherit to hopefully neuter it out.

--- a/doc/doxygen_manual_chm.css
+++ b/doc/doxygen_manual_chm.css
@@ -155,10 +155,11 @@ dl.el {
 
 div.line {
 	font-family: 'JetBrains Mono', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace, fixed;
-        font-size: 13px;
+    font-size: 13px;
 	min-height: 13px;
 	line-height: 1.2;
-	text-wrap: unrestricted;
+	text-wrap: wrap; 
+	word-break: break-all;
 	white-space: -moz-pre-wrap; /* Moz */
 	white-space: -pre-wrap;     /* Opera 4-6 */
 	white-space: -o-pre-wrap;   /* Opera 7 */
