Various tweaks and fixes for the HTML outline panel

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -10,6 +10,10 @@ body, table, div, p, dl {
 	line-height: 22px;
 }
 
+#doc-content {
+	scrollbar-width: thin;
+}
+
 /* @group Heading Levels */
 
 .title {
