--- a/templates/html/lightmode_settings.css
+++ b/templates/html/lightmode_settings.css
@@ -31,7 +31,7 @@
 --blockquote-background-color: ##F8;
 --blockquote-border-color: ##AA;
 
---scrollbar-thumb-color: ##AA;
+--scrollbar-thumb-color: ##CC;
 --scrollbar-background-color: ##FA;
 
 --icon-background-color: ##88;
