Apply scrollbar styling also when GENERATE_TREEVIEW is disabled

--- a/templates/html/scrollbar.css
+++ b/templates/html/scrollbar.css
@@ -1,4 +1,5 @@
-body {
+:root {
+    scrollbar-width: thin;
     scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-background-color);
 }
 
