Tweaks to page outline panel to make it scroll more smoothly

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -1083,7 +1083,7 @@ div.directory {
 span.arrowhead {
 	position: relative;
 	padding: 0;
-	margin: 0;
+	margin: 0 0 0 2px;
 	display: inline-block;
 	width: 5px;
 	height: 5px;
