issue #11491 [BUG] Space character is not rendered in code block

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -335,6 +335,11 @@ pre.fragment {
 	font-family: var(--font-family-monospace);
 }
 
+span.tt {
+        white-space: pre;
+	font-family: var(--font-family-monospace);
+}
+
 .clipboard {
 	width: 24px;
 	height: 24px;
