PR #11862 replace p.startsingle by li:only-child > p.startli

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -79,7 +79,7 @@ p.startli, p.startdd {
 	margin-top: 2px;
 }
 
-p.startlisingle {
+li:only-child > p.startli {
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
