PR #11839 Add requirements traceability
Various fixes:
- styling missing_req improved and separate class via missing satisfies and
  missing verifies sections.
- changed options of REQ_TRACEABILITY_INFO to NO/YES/UNSATISFIES_ONLY/UNVERIFIES_INFO.
- Added GENERATE_REQUIREMENTS option to force disabling the requirements page
  completely. Also removes verifies and satisfies references.
- removed double referenced when coming from the same symbols and id and
  title are the same.
- REQ--001 was not parsed properly due to markdown changing it to &ndash;
- changed documentation to make clear requirement title is optional
- satisfied/verifies title could leak into the type of the symbol
  documented.
- warn about @satisfies or @verifies inside @requirement comment block

--- a/templates/html/darkmode_settings.css
+++ b/templates/html/darkmode_settings.css
@@ -184,3 +184,8 @@
 --invariant-color-bg: #303a35;
 --invariant-color-hl: #76ce96;
 --invariant-color-text: #cceed5;
+--satisfies-color-hl: #ad2617;
+--satisfies-color-bg: #2e1917;
+--verifies-color-hl: #ad2617;
+--verifies-color-bg: #2e1917;
+
